/**
 * @(#) Habitacion.java
 */

public class Habitacion
{
	private int numero;
	
	private double precio;
	
	private String estado;
	
	private Imagen imagenes;
	
	private TipoHabitacion tipo;
	
	private Reservacion reservacion;
	
	
}
