/**
 * @(#) Imagen.java
 */

public class Imagen
{
	private String nombre;
	
	private String contenido;
	
	private String tipo;
	
	private Habitacion habitacion;
	
	
}
