/**
 * @(#) TipoCliente.java
 */

public class TipoCliente
{
	private String nombre;
	
	private String porcentajeDes;
	
	private String descripcion;
	
	private String categoriaCliente;
	
	private Cliente clientes;
	
	
}
